--- a/Config/.env
+++ b/Config/.env
@@ -8,4 +8,4 @@ GMAILID=nillafruitssalem@gmail.com
 GMAILPASSWORD=tn30bl5557
 SECRETECODE=nillafruitssalem@2020
 LOCALMONGODBURL=mongodb://127.0.0.1:27017
- 
+ENKEY=9943835254@123$
