--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aes256": "^1.0.4",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "dirty-json": "^0.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
