--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "npm": "6.5.0",
+    "node": "12.18.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
