--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "npm": "6.5.0",
-    "node": "12.18.2"
+    "node": "12.x"
   },
   "keywords": [],
   "author": "",
